[package]
name = "simple-stream"
version = "0.11.0"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "Provides various building blocks, abstractions, and types for streams."
readme = "README.md"
keywords = ["socket", "stream", "non-blocking", "websocket", "ssl"]
license = "MPL-2.0"
repository = "https://github.com/nathansizemore/simple-stream"
documentation = "https://nathansizemore.github.io/simple-stream/simple_stream/index.html"

[lib]
name = "simple_stream"

[dependencies]
log = "^0.4"
libc = "^0.2"
bitflags = "^0.7"

[dependencies.openssl]
version = "^0.10"
optional = true

[features]
default = ["openssl"]
