[package]
name = "simple-stream"
version = "0.11.0"
edition = "2021"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "Building blocks for streaming chunks of data over io::Read and io::Write impls."
readme = "README.md"
keywords = ["stream", "socket", "chunks", "frames"]
license = "MPL-2.0"
repository = "https://github.com/nathansizemore/simple-stream"
documentation = "https://docs.rs/crate/simple-stream"

[lib]
name = "simple_stream"

[dependencies]
bitflags = "2.3"
libc = "0.2"
log = "0.4"

[dependencies.openssl]
version = "0.10"
optional = true

[features]
default = ["openssl"]
